Adds custom folders for wp-content, uploads and a custom theme-folder to wp-config. Fixed WPC_TABLE_PREFIX.

--- a/.env.php-sample
+++ b/.env.php-sample
@@ -47,11 +47,13 @@ define('DB_COLLATE', '');
  * prefix. Only numbers, letters, and underscores please!
  *
  * This simply configures the $table_prefix-variable in wp-config.
+ *
+ * Override:
  */
-define('WP_TABLE_PREFIX', 'wp_');
+define('WPC_TABLE_PREFIX', 'wp_');
 
 
-/**#@+
+/**
  * Authentication Unique Keys and Salts.
  *
  * Change these to different unique phrases!
@@ -77,10 +79,25 @@ define('WP_ALLOW_MULTISITE', true);
 /* Server Environment: 'dev', 'stage' or 'prod' */
 define('WP_ENV', 'dev');
 
-/* WP-Core location - this is set automatically, override here. */
+/* Override: WP-Core location */
 /*
 define('WP_HOME', 'http://' . $_SERVER['SERVER_NAME']);
 define('WP_SITEURL', 'http://' . $_SERVER['SERVER_NAME'] . '/wp-core');
+*/
+
+/* Override: Content-Dir */
+/*
+define('WP_CONTENT_DIR',  realpath(__DIR__) . '/wp-content');
+*/
+
+/* Override: Custom Uploads-folder */
+/*
+define('UPLOADS',  'uploads');
+*/
+
+/* Override: Custom Themes directory */
+/*
+define('WPC_CUSTOM_THEME_DIR',  'http://' . $_SERVER['SERVER_NAME'] . '/themes');
 */
 
 /* Custom Settings */
