Adds twentyfifteen as default theme.

--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,8 @@
     }
   ],
   "require": {
-    "johnpbloch/wordpress": "~4.2"
+    "johnpbloch/wordpress": "~4.2",
+    "wpackagist-theme/twentyfifteen": "1.2"
   },
   "extra": {
     "wordpress-install-dir": "htdocs/wp-core",
