Various Config-fixes.
* Fixed config for WP_CONTENT_URL
* moved custom theme-dir to the end of the wp-config.
* Changed Server-Urls to variables.

--- a/.env.php-sample
+++ b/.env.php-sample
@@ -74,6 +74,9 @@ define('NONCE_SALT',       'put your unique phrase here');
 /* Multi-site */
 /*
 define('WP_ALLOW_MULTISITE', true);
+define('MULTISITE', true);
+define('SUBDOMAIN_INSTALL', false);
+define('PATH_CURRENT_SITE', '/wp-core');
 */
 
 /* Server Environment: 'dev', 'stage' or 'prod' */
@@ -81,13 +84,14 @@ define('WP_ENV', 'dev');
 
 /* Override: WP-Core location */
 /*
-define('WP_HOME', 'http://' . $_SERVER['SERVER_NAME']);
-define('WP_SITEURL', 'http://' . $_SERVER['SERVER_NAME'] . '/wp-core');
+define('WP_HOME', $server_url);
+define('WP_SITEURL', $server_url . '/wp-core');
 */
 
 /* Override: Content-Dir */
 /*
-define('WP_CONTENT_DIR',  realpath(__DIR__) . '/wp-content');
+define('WP_CONTENT_DIR',  $docroot_dir . '/wp-content');
+define('WP_CONTENT_URL',  $server_url . '/wp-content');
 */
 
 /* Override: Custom Uploads-folder */
@@ -97,7 +101,7 @@ define('UPLOADS',  'uploads');
 
 /* Override: Custom Themes directory */
 /*
-define('WPC_CUSTOM_THEME_DIR',  'http://' . $_SERVER['SERVER_NAME'] . '/themes');
+define('WPC_CUSTOM_THEME_DIR',  $server_url . '/themes');
 */
 
 /* Custom Settings */
