Updated sample-config, keeps folders, fixed custom theme-folders.
* Restructured config, core-locations are now constants.
* Adds a mu-plugin for fixing custom theme-paths outside the core or wp-content.
* Keeps uploads and the custom theme-folder around, but empty.

--- a/.env.php-sample
+++ b/.env.php-sample
@@ -71,27 +71,23 @@ define('SECURE_AUTH_SALT', 'put your unique phrase here');
 define('LOGGED_IN_SALT',   'put your unique phrase here');
 define('NONCE_SALT',       'put your unique phrase here');
 
-/* Multi-site */
+/* Override: Root-locations */
 /*
-define('WP_ALLOW_MULTISITE', true);
-define('MULTISITE', true);
-define('SUBDOMAIN_INSTALL', false);
-define('PATH_CURRENT_SITE', '/wp-core');
+$wpc_docroot_dir = realpath(__DIR__);
+$wpc_root_dir = realpath(__DIR__ . '/..');
+$wpc_docroot_url = 'http://' . $_SERVER['SERVER_NAME'];
 */
 
-/* Server Environment: 'dev', 'stage' or 'prod' */
-define('WP_ENV', 'dev');
-
-/* Override: WP-Core location */
+/* Override: WP-Core locations */
 /*
-define('WP_HOME', $server_url);
-define('WP_SITEURL', $server_url . '/wp-core');
+define('WP_HOME', $wpc_docroot_url);
+define('WP_SITEURL', $wpc_docroot_url . '/wp-core');
 */
 
 /* Override: Content-Dir */
 /*
-define('WP_CONTENT_DIR',  $docroot_dir . '/wp-content');
-define('WP_CONTENT_URL',  $server_url . '/wp-content');
+define('WP_CONTENT_DIR',  $wpc_docroot_dir . '/wp-content');
+define('WP_CONTENT_URL',  $wpc_docroot_url . '/wp-content');
 */
 
 /* Override: Custom Uploads-folder */
@@ -99,9 +95,9 @@ define('WP_CONTENT_URL',  $server_url . '/wp-content');
 define('UPLOADS',  'uploads');
 */
 
-/* Override: Custom Themes directory */
+/* Override: Custom Themes directory (Registered by the mu-plugin "custom-theme-dir") */
 /*
-define('WPC_CUSTOM_THEME_DIR',  $server_url . '/themes');
+define('WPC_CUSTOM_THEME_DIR',  $wpc_docroot_dir . '/themes');
 */
 
 /* Custom Settings */
@@ -111,13 +107,24 @@ define('DISABLE_WP_CRON', true);
 define('DISALLOW_FILE_EDIT', true);
 */
 
+/* Multi-site */
+/*
+define('WP_ALLOW_MULTISITE', true);
+define('MULTISITE', true);
+define('SUBDOMAIN_INSTALL', false);
+define('PATH_CURRENT_SITE', '/wp-core');
+*/
+
 /**
  * For developers: WordPress debugging mode.
  *
- * Change this to true to enable the display of notices during development.
+ * Change WP_DEBUG to true to enable the display of notices during development.
  * It is strongly recommended that plugin and theme developers use WP_DEBUG
  * in their development environments.
  */
+
+/* Server Environment: 'dev', 'stage' or 'prod' */
+define('WP_ENV', 'dev');
 
 /* Development */
 /*
@@ -141,3 +148,5 @@ define('WP_DEBUG_DISPLAY', false);
 define('SCRIPT_DEBUG', false);
 define('DISALLOW_FILE_MODS', true);
 */
+
+/* That's all, stop editing! Happy blogging. */
