Moved mu-plugins from wp-content to htdocs, in order to separate custom-code and external dependencies.
* Updated Readme on Themes and Plugins.
* Wp-composed-support introduces stage-identificators as meta-tag and body-class for all stages other than production.

--- a/.gitignore
+++ b/.gitignore
@@ -17,7 +17,8 @@
 # Ignore everything inside wp-content, except the mu-plugins-folder
 !/htdocs/wp-content
 /htdocs/wp-content/*
-!/htdocs/wp-content/mu-plugins/
+
+!/htdocs/mu-plugins/
 
 # Ignore everything inside uploads, but keep the folder
 !/htdocs/uploads
