--- a/.gitignore
+++ b/.gitignore
@@ -1,30 +1,16 @@
-# Ignore everything ...
-/*
+# Jetbrains
+*.iml
+/.idea
 
-# ... except
-!composer.json
-!composer.lock
-!.env.php-sample
-!.gitignore
-!Readme.md
+# VSCode
+/.vscode
 
-!LICENSE
-!/docs/
-# Ignore everything inside htdocs, except the themes-folder
-!/htdocs
-/htdocs/*
-!/htdocs/themes/
-# Ignore everything inside wp-content, except the mu-plugins-folder
-!/htdocs/wp-content
-/htdocs/wp-content/*
+# Node.js
+node_modules
 
-!/htdocs/mu-plugins/
+# Wordpress-core
+/htdocs/wp-core
 
-# Ignore everything inside uploads, but keep the folder
-!/htdocs/uploads
+# Content and Uploads
+/htdocs/wp-content
 /htdocs/uploads/*
-!/htdocs/uploads/.gitkeep
-
-!/htdocs/.htaccess
-!/htdocs/index.php
-!/htdocs/wp-config.php
