--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,7 @@
 {
-  "name": "mto.org",
-  "description": "MTO Multisite Wordpress",
+  "name": "wordpress-composed",
+  "description": "Wordpress-Composed",
+  "version": "2.0.0",
   "type": "project",
   "license": "ISC",
   "authors": [
@@ -15,11 +16,11 @@
   "repositories": [
     {
       "type": "composer",
-      "url": "http://wpackagist.org"
+      "url": "https://wpackagist.org"
     }
   ],
   "require": {
-    "johnpbloch/wordpress": "~4.4"
+    "johnpbloch/wordpress": "~4.7"
   },
   "extra": {
     "wordpress-install-dir": "htdocs/wp-core",
@@ -27,5 +28,10 @@
           "htdocs/wp-content/plugins/{$name}/": ["type:wordpress-plugin"],
           "htdocs/wp-content/themes/{$name}/": ["type:wordpress-theme"]
       }
+  },
+  "autoload": {
+    "psr-4": {
+      "": "lib/php"
+    }
   }
 }
