--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
-  "name": "wordpress-composed",
+  "name": "finaldream/wordpress-composed",
   "description": "Wordpress-Composed",
-  "version": "2.0.0",
+  "version": "2.0.1",
   "type": "project",
   "license": "ISC",
   "authors": [
